kustomize/overlays/uat/data_pvc_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-deployment
  labels:
    app: healthcheck-deployment
spec:
  template:
    spec:
      containers:
        - name: healthcheck
          volumeMounts:
            - mountPath: /app/data_dir
              name: healthcheck-data
      volumes:
        - name: healthcheck-data
          persistentVolumeClaim:
            claimName: healthcheck-data-uat

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: healthcheckserver-statefulset
  labels:
    app: healthcheckserver-statefulset
spec:
  template:
    spec:
      containers:
        - name: healthcheckserver
          volumeMounts:
            - mountPath: /app/data_dir
              name: healthcheck-data
      volumes:
        - name: healthcheck-data
          persistentVolumeClaim:
            claimName: healthcheck-data-uat
