kustomize/overlays/uat/statefulset_healthcheckserver_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: healthcheckserver-statefulset
spec:
  template:
    spec:
      containers:
        - name: healthcheckserver
