kustomize/overlays/uat/statefulset_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: healthcheckserver-statefulset
spec:
  template:
    spec:
      volumes:
        - name: healthcheck-data
          persistentVolumeClaim:
            claimName: healthcheck-data-uat
      containers:
        - name: healthcheckserver
          volumeMounts:
            - mountPath: /app/data_dir
              name: healthcheck-data
