kustomize/overlays/uat/service_healthcheckserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcheckserver-headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: wsgi
      port: 9080
      protocol: TCP
      targetPort: 9080
