kustomize/overlays/uat/service_healthcheckserver_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcheckserver-headless
spec:
  type: ClusterIP
  selector:
    app: healthcheckserver-statefulset
    variant: uat
