kustomize/overlays/uat/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcheck-clusterip
spec:
  type: ClusterIP
  selector:
    app: healthcheck-deployment
    variant: uat
---
apiVersion: v1
kind: Service
metadata:
  name: healthcheckserver-headless
spec:
  type: ClusterIP
  selector:
    app: healthcheckserver-statefulset
    variant: uat
